deploy/compose/rayline-arc/envoy-real-workers.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
    - name: rayline-arc-real-workers-http
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8888
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: rayline_arc_real_workers_ingress
                codec_type: AUTO
                stream_idle_timeout: 180s
                route_config:
                  name: rayline_arc_real_workers_route
                  virtual_hosts:
                    - name: rayline_arc_real_workers
                      domains: ["*"]
                      include_request_attempt_count: true
                      include_attempt_count_in_response: true
                      routes:
                        - match:
                            prefix: /
                            headers:
                              - name: x-selected-model
                                string_match:
                                  exact: worker-a
                          route:
                            cluster: worker_a
                            timeout: 180s
                            idle_timeout: 180s
                            host_rewrite_literal: atlasfutures-dev--rayline-arc-generation-workers-worker-a.modal.run
                        - match:
                            prefix: /
                            headers:
                              - name: x-selected-model
                                string_match:
                                  exact: worker-b
                          route:
                            cluster: worker_b
                            timeout: 180s
                            idle_timeout: 180s
                            host_rewrite_literal: atlasfutures-dev--rayline-arc-generation-workers-worker-b.modal.run
                        - match:
                            prefix: /
                          direct_response:
                            status: 503
                http_filters:
                  - name: envoy.filters.http.ext_proc
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor
                      allow_mode_override: true
                      grpc_service:
                        envoy_grpc:
                          cluster_name: semantic_router
                        timeout: 180s
                      processing_mode:
                        request_header_mode: SEND
                        response_header_mode: SEND
                        request_body_mode: BUFFERED
                        response_body_mode: BUFFERED
                      message_timeout: 180s
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: semantic_router
      connect_timeout: 5s
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      http2_protocol_options: {}
      load_assignment:
        cluster_name: semantic_router
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: router
                      port_value: 50051
    - name: worker_a
      connect_timeout: 10s
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: worker_a
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: atlasfutures-dev--rayline-arc-generation-workers-worker-a.modal.run
                      port_value: 443
                  hostname: atlasfutures-dev--rayline-arc-generation-workers-worker-a.modal.run
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: atlasfutures-dev--rayline-arc-generation-workers-worker-a.modal.run
          common_tls_context:
            validation_context:
              trusted_ca:
                filename: /etc/ssl/certs/ca-certificates.crt
            tls_params:
              tls_minimum_protocol_version: TLSv1_2
              tls_maximum_protocol_version: TLSv1_3
    - name: worker_b
      connect_timeout: 10s
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: worker_b
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: atlasfutures-dev--rayline-arc-generation-workers-worker-b.modal.run
                      port_value: 443
                  hostname: atlasfutures-dev--rayline-arc-generation-workers-worker-b.modal.run
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: atlasfutures-dev--rayline-arc-generation-workers-worker-b.modal.run
          common_tls_context:
            validation_context:
              trusted_ca:
                filename: /etc/ssl/certs/ca-certificates.crt
            tls_params:
              tls_minimum_protocol_version: TLSv1_2
              tls_maximum_protocol_version: TLSv1_3

layered_runtime:
  layers:
    - name: static_layer
      static_layer:
        overload:
          global_downstream_max_connections: 1000
